<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SetuppinFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        >
        <TextView
            android:id="@+id/setuppin_headher_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_image_height"
            android:textColor="@color/white"
            android:background="@drawable/mpinimage"
            android:padding="@dimen/header_textview_padding"
            android:gravity="left|center"
            android:textStyle="bold"
            android:text="@string/setuppin_title_fragment"
            android:textSize="@dimen/spalsh_title_size" />
        <View
            android:id="@+id/view"
            android:layout_width="100dp"
            android:layout_height="5dp"
            android:layout_below="@+id/setuppin_headher_title"
            android:layout_marginBottom="10dp"
            android:background="@color/teal_200" />

        <TextView
            android:id="@+id/otp_mobiletextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_margin="30dp"
            android:layout_below="@+id/setuppin_headher_title"
            android:text="Setup PIN"
            android:gravity="center"
            android:textSize="@dimen/opt_message_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/otpET1"
                android:layout_width="@dimen/otp_text_height_width"
                android:layout_height="@dimen/otp_text_height_width"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/otpET2"
                android:layout_width="@dimen/otp_text_height_width"
                android:layout_height="@dimen/otp_text_height_width"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/otpET3"
                android:layout_width="@dimen/otp_text_height_width"
                android:layout_height="@dimen/otp_text_height_width"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:gravity="center"
                android:backgroundTint="@color/black"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/otpET4"
                android:layout_width="@dimen/otp_text_height_width"
                android:layout_height="@dimen/otp_text_height_width"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:textSize="20sp"/>
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/buttom_margin">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/buttom_margin"
            android:textSize="@dimen/login_checkboxtext_size"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:buttonTint="@color/black"
            android:text="@string/setup_pin_checkbox_text" />

        <Button
            android:id="@+id/setupPINcontinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/continue_name" />

        <TextView
            android:id="@+id/skip_for_now_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_pin_skip_now_text"
            android:textColor="#1B72BF"
            android:lineSpacingExtra="10dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="15sp" />
    </LinearLayout>

</FrameLayout>